--- a/app/views/users/_info_window.html.erb
+++ b/app/views/users/_info_window.html.erb
@@ -4,7 +4,7 @@
     <i class="fas fa-times" style="color: #798645;"></i>
   </div>
 
-  <h6 class="fw-bold mb-2" style="color: #798645;"><%= activity.name %></h6>
+  <h6 class="fw-bold mb-2" style="color: #798645;"><%= activity_user.username %></h6>
 
   <p class="mb-1">
     <i class="fas fa-map-marker-alt me-1" style="color: #626F47;"></i>
