feat: styling map and adding the card on the right.

--- a/app/views/users/_info_box.html.erb
+++ b/app/views/users/_info_box.html.erb
@@ -1,6 +1,6 @@
 <% if user && trips.present? %>
-  <div class="d-flex justify-content-center mt-4 mb-4">
-    <div class="rounded-4 shadow" style="width: 340px; overflow: hidden; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: white;">
+  <div class="d-flex justify-content-center mb-4">
+    <div class="rounded-4 shadow" style="width: 300px; overflow: hidden; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: white;">
 
       <!-- Top block (color only) -->
       <div style="background-color: #798645; height: 80px; position: relative;"></div>
