--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,23 @@
 <div class="container py-4" style="max-width: 100%;">
   <!-- Search Bar -->
-<div data-controller="search" class="mb-3 px-3">
-  <div class="input-group" style="max-width: 320px;">
-    <%= text_field_tag :username, nil,
-      placeholder: "Search by place or friend",
-      class: "form-control rounded-start",
-      data: { search_target: "input" },
-      autocomplete: "off" %>
+  <div data-controller="search" class="mb-3 px-3 search-bar-wrapper">
+    <div class="input-group search-bar-inner">
+      <%= text_field_tag :username, nil,
+        placeholder: "Search by place or friend",
+        class: "form-control rounded-start",
+        data: { search_target: "input" },
+        autocomplete: "off" %>
 
-    <%= button_tag "Search",
-      type: "button",
-      class: "btn btn-primary rounded-end",
-      style: "background-color: #798645; border-color: #798645;",
-      data: { action: "click->search#handleSearch" } %>
+      <%= button_tag "Search",
+        type: "button",
+        class: "btn btn-primary rounded-end",
+        style: "background-color: #798645; border-color: #798645;",
+        data: { action: "click->search#handleSearch" } %>
+    </div>
   </div>
-</div>
 
   <!-- Flex layout: Map on left, Info card on right -->
-  <div class="d-flex flex-row px-3" id="map-and-info" style="gap: 1.5rem;">
+  <div class="d-flex flex-row px-3" id="map-and-info" style="gap: 1.5rem; flex-wrap: wrap;">
     <!-- Map -->
     <div
       id="map"
@@ -28,7 +28,37 @@
       data-map-markers-value="<%= @markers.to_json %>">
     </div>
 
-    <!-- User Info Box (Initially hidden) -->
+    <!-- User Info Box -->
     <div id="user-info-box" style="width: 320px;"></div>
   </div>
 </div>
+
+<style>
+  .search-bar-inner {
+    max-width: 400px;
+    width: 100%;
+  }
+
+  @media (max-width: 768px) {
+    #map-and-info {
+      flex-direction: column !important;
+      align-items: center !important;
+    }
+
+    #map {
+      width: 100% !important;
+      max-width: 100% !important;
+    }
+
+    #user-info-box {
+      width: 100% !important;
+      max-width: 320px;
+      margin-top: 1rem;
+    }
+
+    .search-bar-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+  }
+</style>
