--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,9 @@
 .footer a.text-light:hover {
   color: #F2EED7 !important;
 }
+
+input:focus,
+button:focus {
+  box-shadow: none !important;
+  outline: none !important;
+}
