--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -7,7 +7,7 @@
     <div class="row mb-4 text-center text-md-start">
       <div class="col-md-6 mb-3">
         <p class="mb-1"><strong>Location:</strong></p>
-        <p class="fs-5 text-primary"><%= h @trip.location %></p>
+        <p class="fs-5 " style="color:#626F47"><%= h @trip.location %></p>
       </div>
       <div class="col-md-6 mb-3 d-flex justify-content-center justify-content-md-start gap-4 align-items-center">
         <div>
@@ -65,7 +65,7 @@
                       <% end %>
 
                       <div class="flex-grow-1 d-flex flex-column gap-2">
-                      <h5 class="text-primary fw-bold mb-1 d-flex align-items-center gap-2 flex-nowrap">
+                      <h5 class="fw-bold mb-1 d-flex align-items-center gap-2 flex-nowrap" style="color: #626F47;">
                         <%= h activity.name %>
                       </h5>
 
