--- a/app/views/onboarding/sub_interests.html.erb
+++ b/app/views/onboarding/sub_interests.html.erb
@@ -1,11 +1,11 @@
 <% content_for :hide_navbar, true %>
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
-  <div class="bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black;">
+<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white; margin-top: -60px">
+  <div class=" bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black; height: 420px;">
     <h1 class="archivo-black fw-bold fs-3 mb-4">Let's dive deeper...</h1>
 
     <%= form_with url: onboarding_save_sub_interests_path, method: :post, local: true do %>
-      <div class="overflow-auto" style="max-height: 60vh;">
+      <div class="overflow-auto" style="max-height: 220px;">
         <% @selected_category_ids.each do |cat_id| %>
           <% category = Category.find(cat_id) %>
           <h5 class="archivo-black  mt-3"><%= category.name %></h5>
@@ -13,20 +13,20 @@
           <div class="d-flex flex-wrap gap-2 justify-content-center mb-5">
             <% @subcategories.where(category_id: cat_id).each do |subcat| %>
               <%= check_box_tag "subcategory_ids[]", subcat.id, false, class: "btn-check", id: "subcat_#{subcat.id}", autocomplete: "off" %>
-              <%= label_tag "subcat_#{subcat.id}", subcat.name, class: "btn btn-outline-primary rounded-pill px-4 py-2 archivo fw-semibold" %>
+              <%= label_tag "subcat_#{subcat.id}", subcat.name, class: "btn-outline-custom rounded-pill px-4 py-2 archivo fw-semibold" %>
             <% end %>
           </div>
         <% end %>
       </div>
 
-      <div class="d-flex gap-3 justify-content-center mt-3">
-        <%= link_to "← Back", onboarding_interests_path , class: "btn btn-outline-secondary btn-lg rounded-pill" %>
-        <%= submit_tag "Next →", class: "btn btn-primary btn-lg rounded-pill" %>
+      <div class="d-flex gap-3 justify-content-center mt-4", style="margin-bottom: 90px">
+        <%= link_to "← Back", onboarding_interests_path , class: "btn btn-light rounded-pill archivo", style: "width: 150px; font-weight: 600; font-size: 18px" %>
+        <%= submit_tag "Next →", class: "btn btn-secondary rounded-pill archivo", style: "width: 150px; font-weight: 600; font-size: 18px" %>
       </div>
     <% end %>
 
-    <div class="progress mt-4" style="height: 8px; border-radius: 4px;">
-      <div class="progress-bar bg-success" style="width: 50%;"></div>
+    <div class="progress" style="height: 8px; border-radius: 4px; margin-top: -67px">
+      <div class="progress-bar" style="width: 50%; background-color: #798645"></div>
     </div>
   </div>
 </div>
