--- a/app/views/onboarding/welcome.html.erb
+++ b/app/views/onboarding/welcome.html.erb
@@ -1,14 +1,15 @@
 <% content_for :hide_navbar, true %>
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
-  <div class="bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black;">
-    <h1 class="archivo-black fw-bold fs-3 mb-3">✨ Welcome to Plan&Go, <%= current_user.first_name %>✨</h1>
-    <p class="archivo fs-6 text-secondary mb-2">We build smart travel routes based on what you love. </p>
-    <p class="archivo fs-6 text-secondary mb-2">Let’s get to know your vibe! </p><br>
 
-    <%= link_to "Let's Go →", onboarding_interests_path, class: "btn btn-primary btn-lg rounded-pill px-4" %>
+<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white; margin-top: -60px">
+  <div class="d-flex flex-column justify-content-end bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black; height: 420px;">
+    <div>
+      <h1 class="archivo-black fw-bold fs-3 mb-3", style="color: #121212">Welcome to Plan&Go, <%= current_user.first_name %></h1>
+      <p class="archivo fs-6 text-secondary", style="font-weight: 300;">Tell us your travel preferences to receive customised trip plans</p>
 
-    <div class="progress mt-5" style="height: 8px; border-radius: 4px;">
+      <%= link_to "Let's Go →", onboarding_interests_path, class: "btn btn-secondary rounded-pill archivo mt-3", style: "width: 150px; font-weight: 600; font-size: 18px"%>
+    </div>
+    <div class="progress" style="height: 8px; border-radius: 4px; margin-top: 90px">
       <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
