--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
           </ul>
         </div>
       <% else %>
-        <%= link_to "Log In", new_user_session_path, class: "text-style archivo-black text-decoration-none" %>
+        <%= link_to "Log In", new_user_session_path, class: "btn btn-secondary rounded-pill archivo", style: "width: 120px; font-weight: 600; font-size: 15px" %>
       <% end %>
     </div>
     <button class="navbar-toggler d-lg-none" type="button"
@@ -53,16 +53,22 @@
         <li><%= link_to "Plan your Trip", root_path, class: "nav-link-inline p-0", style: "font-size: 25px" %></li>
         <li><%= link_to "Search", users_path, class: "nav-link-inline p-0", style: "font-size: 25px" %></li>
         <li><%= link_to "My Preferences", onboarding_interests_path , class: "nav-link-inline p-0", style: "font-size: 25px" %></li>
-        <li><%= link_to "About Us", about_path, class: "nav-link-inline p-0" %></li>
+        <li><%= link_to "About Us", about_path, class: "nav-link-inline p-0",style: "font-size: 25px" %></li>
         <li><hr class="dropdown-divider"></li>
             <%= link_to "Log Out", destroy_user_session_path,
             class: "btn btn-outline-danger rounded-pill archivo mt-5 w-100 fw-600",
             style: "max-width: 150px; font-weight: 600; font-size: 18px",
             data: { turbo_method: :delete } %>
       <% else %>
-        <%= link_to "Home", root_path, class: "nav-link-inline p-0" %>
-        <%= link_to "Log In", new_user_session_path, class: "nav-link-inline p-0" %>
-        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link-inline p-0" %>
+        <div class="d-flex flex-column align-items-start gap-2">
+          <%= link_to "Home", root_path, class: "nav-link-inline p-0", style: "font-size: 25px" %>
+          <li><%= link_to "About Us", about_path, class: "nav-link-inline p-0",style: "font-size: 25px" %></li>
+          <div class="d-flex flex-row justify-content-between align-items-center">
+            <%= link_to "Log In", new_user_session_path, class: "btn btn-secondary rounded-pill archivo mb-2 mt-4 me-3",
+            style: "width: 150px; font-weight: 600; font-size: 18px" %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-light rounded-pill archivo mt-4 mb-2 me-3", style: "width: 150px; font-weight: 600; font-size: 18px" %>
+          </div>
+        </div>
       <% end %>
       </ul>
     </div>
