--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div>
           <div class="d-flex align-items-center gap-2">
-            <p class="mb-0 fs-3 archivo-black" style="color: #F2EED7;">
+            <p class="mb-0 fs- archivo-black" style="color: #F2EED7;">
               <%= @trip.user.username %>
             </p>
             <span class="badge bg-<%= level_badge_color(@trip.user.level) %>">
