changes to onbardin

--- a/app/views/onboarding/friends.html.erb
+++ b/app/views/onboarding/friends.html.erb
@@ -4,7 +4,8 @@
   <div class="bg-white bg-opacity-75 rounded-4 shadow-lg text-center pb-4 pe-4 ps-4"
        style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black; height: 420px; padding-top: 128.5px;">
 
-    <h1 class="archivo-black fw-bold fs-3 mb-4">Add Friends</h1>
+    <h1 class="archivo-black fw-bold fs-3 mb-4">Connect with your Friends</h1>
+    <p>Add friends to invite them to trips!</p>
 
     <%= form_with url: onboarding_find_friends_path, method: :post, local: true do |form| %>
       <div class="mb-4 d-flex flex-column align-items-center">
