--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div style="height: 100vh; background-color: #FFF; display: flex; align-items: center; justify-content: center;">
   <div class="container" style="max-width: 700px; width: 80%; margin: auto; height: 60%; margin-top:11%">
-  <h1  class="archivo fs-3 mt-1 mb-1 text-center" style="font-weight: 800; color: #121212">About Us</h1>
+  <h1  class="archivo fs-3 mt-1 mb-1 text-center" style="font-weight: 800; color: #121212">Who we are</h1>
   <p class="archivo mt-4 text-center" style="font-weight: 200; color: #121212; font-size: 15px; line-height: 1.5;">
     We understand that planning a trip can be overwhelming and time consuming, especially when it comes to finding activities and experiences that, not only suit your interests and budget, but also fit the preferences of your travel buddies.
   </p>
@@ -8,7 +8,7 @@
   That's why we created Plan&Go - an AI powered personalised trip planner that aims to make planning every day of your trip as easy as possible.
   </p>
   <p class="archivo mt-4 text-center" style="font-weight: 200; color: #121212; font-size: 15px; line-height: 1.5;">
-    We want to give people that are passionate about discovery the right tools to manage their travel plans, along with a platform where they can connect, share and experience trips together.
+    We want to give people that are passionate about travelling the right tools to manage their travel plans, along with a platform where they can connect, share and experience trips together.
   </p>
   <p class="archivo mt-4 text-center" style="font-weight: 200; color: #121212; font-size: 15px; line-height: 1.5;">
     Join our growing community of travel enthusiasts!
