--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,16 @@
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
+      <div class="form-floating mb-3">
+        <%= f.text_field :username,
+              class: "form-control",
+              id: "floatingUsername",
+              placeholder: "Username",
+              required: true,
+              autocomplete: "username" %>
+        <%= f.label :username, "Username", for: "floatingUsername" %>
+      </div>
+
       <div class="form-inputs" style="">
         <div class="form-floating mb-3">
           <%= f.email_field :email,
