--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -31,7 +31,7 @@
   border-width: 1.5px;
   border-style: solid;
   border-color: #626F47;
-  background-color: white;
+  background-color: transparent;
   font-weight: 400;
   transition: background-color 300ms, color 300ms, border-color 300ms;
 }
